Alteração da imagem

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <div class="page">
     <div class="container">
-      <img src="/Assets/cupcake.jpg" alt="Fotos de Cupcakes com grãos de café">
+      <img src="/Assets/cupcake.png" alt="Fotos de Cupcakes com grãos de café">
 
       <main>
         <section id="about">
