alterando estilos, fontes,etc

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
           </p>
         </section>
 
+        <div class="border"></div>
+
         <section id="ingredients" >
           <h2>
             Ingredientes
@@ -56,6 +58,8 @@
           </ul>
         </section>
 
+        <div class="border"></div>
+        
         <section id="preparo" >
           <h2>Modo de preparo</h2>
 
